<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.search_movie_flow.domain.entity.SearchMovieEntity" />
    </data>
        
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_movie_list_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="64dp"
            android:layout_height="64dp"
            load_movie_image="@{viewModel.image}"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/rectangle_fill_purple_8dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_movie_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_movie_poster"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
            app:layout_constraintTop_toTopOf="@+id/iv_movie_poster">

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"
                android:textColor="@color/gray_53"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_movie_title_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:ems="15"
                android:text="@{viewModel.title}"
                android:maxLines="1"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/tv_movie_title"
                app:layout_constraintStart_toEndOf="@+id/tv_movie_title"
                app:layout_constraintTop_toTopOf="@+id/tv_movie_title"
                tools:text="아이" />

            <TextView
                android:id="@+id/tv_movie_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_release"
                android:textColor="@color/gray_53"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />

            <TextView
                android:id="@+id/tv_movie_release_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:text="@{viewModel.pubDate}"
                app:layout_constraintBottom_toBottomOf="@+id/tv_movie_release"
                app:layout_constraintStart_toEndOf="@+id/tv_movie_release"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
                tools:text="2021" />

            <TextView
                android:id="@+id/tv_movie_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_rate"
                android:textColor="@color/gray_53"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_release" />

            <TextView
                android:id="@+id/tv_movie_rate_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:text="@{viewModel.userRating}"
                app:layout_constraintBottom_toBottomOf="@+id/tv_movie_rate"
                app:layout_constraintStart_toEndOf="@+id/tv_movie_rate"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_release"
                tools:text="0.00" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>